<resources>
    <string name="app_name">Capstone Project</string>
    <string name="popular_games">Popular Games</string>
    <string name="my_library">My Library</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="error_message">An error has occurred. Please try again later!</string>

    <string name="release_date_details">Release Date</string>
    <string name="rating_details">Rating</string>
    <string name="synopsis_details">Summary</string>
    <string name="trailer_details">Trailer</string>
    <string name="reviews_details">Reviews</string>
    <string name="genre_details">Genre:</string>
    <string name="platforms_details">Platforms:</string>

    <string name="app_label">CapStone Project</string>
    <string name="search_hint">Search Game</string>
    <string name="search_title">Search</string>
    <string name="remove_library">Remove from Library</string>
    <string name="add_library">Add to Library</string>
    <string name="games_library">Games Library</string>
    <string name="dots">.....................................................................</string>
    <string name="no_summary">No Summary Available</string>
    <string name="no_release_date">No Release Date available</string>
    <string name="no_genre">No Genre Available</string>
    <string name="no_platform">No Platform Available</string>
    <string name="no_rating">No Rating available</string>
    <string name="add_games">Add some games to your library!</string>
    <string name="error_message_internet">Something went wrong. Try again!</string>
    <string name="no_results">No Results</string>
    <string name="best_game">Click to see the best game ever made</string>
    <string name="wait_for_image">Please wait...It is downloading</string>
    <string name="the_witcher_3_cover">The Witcher 3 Cover</string>
</resources>
