<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/game_cover_image_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                tools:src="@drawable/image_loading" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/game_title_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Game Title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="30dp"
                        android:text="@string/release_date_details"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/release_date_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        tools:text="16/12/1990" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rating_details"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/rating_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        tools:text="10" />

                </LinearLayout>

                <Button
                    android:id="@+id/favourite_button_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Add to Favourites" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:text="@string/genre_details"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genre_details"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="4dp"
                tools:text="Shooter, RPG, etc." />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:text="@string/platforms_details"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/platform_details"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="4dp"
                tools:text="PS4, Switch, XBOX1, PC" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:focusable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/synopsis_details"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/synopsis_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/trailer_details"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
